hard-gists/ead9898bd3c973c40429/run.log
=== Docker Run Log for ead9898bd3c973c40429 ===
Started at: Mi 29. Okt 20:51:47 CET 2025

[2025-10-29 20:51:48] START: Running container for ead9898bd3c973c40429
[2025-10-29 20:51:48] SUCCESS: Container 5b34c5254fc71c4660a5b57bfd8d75eb3c6485c0c726ae4cd160f6e746a68feb started for ead9898bd3c973c40429
=== Container logs for ead9898bd3c973c40429 ===
  File "/snippet.py", line 204
    print  MI_est, MI_th
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ead9898bd3c973c40429 ===
[2025-10-29 20:51:50] INFO: Container 5b34c5254fc71c4660a5b57bfd8d75eb3c6485c0c726ae4cd160f6e746a68feb has stopped
